@startuml
class NavMeshSnap {
    - Start() : void
    - OnValidate() : void
    - UpdateSpline() : void
    - UpdatePoint() : void
}
enum Mode {
    Spline,
    Point,
}
MonoBehaviour <|-- NavMeshSnap
NavMeshSnap --> "offset" Vector3
NavMeshSnap o-> "_mode" Mode
NavMeshSnap --> "_splineContainer" SplineContainer
NavMeshSnap --> "_target" Transform
NavMeshSnap +-- Mode
@enduml
